networking/gnis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gnis
spec:
  ports:
  - name: gnis
    port: 80
    targetPort: 80
  selector:
    app: gnis
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
