networking/gnis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnis
  namespace: gnis
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - stage.gnis-ld.org
    secretName: ingress-tls-cert
  rules:
  - host: stage.gnis-ld.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gnis
            port:
              number: 80
